blog/blogstyle.css
@media (min-width: 1000px) {
html {
    font-family: 'Ubuntu Mono';
    font-size: 22px;
}

body {
  padding: 2rem 3rem;
  margin: 50px 250px;
}

p {
    font-size: 1rem;
}

div.comments {
  border: 2px solid black;
  padding: 0.5rem;
}

img.profile {
   height: auto;
   width: 220px;
   border-radius: 100%;
   margin-bottom: 0.5rem;
}

.name {
   font-size: 2.5rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
}

a {
    font-size: 1rem;
    color: #0060B6;
    border: bold;
}


a:hover {
     color: #00A0C6;
     text-decoration:none;
     cursor:pointer;
}

div.code {
  background-color: LightGray;
  padding-left: 20px;
  padding-right: 20px;
  word-wrap: break-word;
}

code {
  background-color: LightGray;
  font-size: 20px;
}



}


/* Mobile ------------------------------------------------------------ */
@media (max-width: 1000px) {
html {
    font-family: 'Ubuntu Mono';
    font-size: 16px;
}

body {
}

p {
    font-size: 1rem;
}

div.comments {
  border: 2px solid black;
  padding: 0.5rem;
}

img.profile {
   height: auto;
   width: 220px;
   border-radius: 100%;
   margin-bottom: 0.5rem;
}

.name {
   font-size: 2.5rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
}

a {
    font-size: 1rem;
    color: #0060B6;
    border: bold;
}


a:hover {
     color: #00A0C6;
     text-decoration:none;
     cursor:pointer;
}

div.code {
  background-color: LightGray;
}

code {
  background-color: LightGray;
  font-size: 14px;

}

}

